package paquete;

public class Combate extends NaveInicial {
    public Combate() {
        super(80, 100); //indico los valores de inicio a naveInicial
    }

    @Override
    public void cargaCombustible(int combustible) {

    }

    @Override
    public void cargaEnergia(int energia) {

    }

    @Override
    public void realizarMantenimiento() {

    }
}
